2010-07-20  Matevz Tadel  <mtadel@greed>

	* graf2d/gpad/src/TCanvas.cxx:
	* graf2d/gpad/inc/TCanvas.h:
	Add functions:
	   void SetCanvasSizeForOffscreenRendering(UInt_t cw,   UInt_t ch,
	                                           UInt_t& ocw, UInt_t& och);
	   void RestoreCanvasSizeAfterOffscreenRendering(UInt_t cw, UInt_t ch);
	that allow setting of perceived window/canvas size. This is used
	all over pad-painting.
	There is still some problem with histo-painter.

	* graf3d/gl/src/TGLFBO.cxx:
	* graf3d/gl/inc/TGLFBO.h:
	Add data-members:
	  Int_t   fRequestedW, fRequestedH;
	that allow to query the width/height that user asked for.
	Add getters for them and for actual width and height.

	* graf3d/eve/src/TEvePadFrameGL.cxx:
	Generate mipmaps for FBO texture after it is created.
	Try to make FBOs work with width/height other than that of the
	canvas/window. Somewhat works, histo-painter object behave strange.

2010-07-20  Matevz Tadel  <mtadel@greed>

	* graf3d/gl/src/TGLPadPainter.cxx:
	* graf3d/gl/inc/TGLPadPainter.h:
	Add function:
	  void InitPainterWithOptions(Bool_t set_viewport);

	* graf3d/gl/src/TGLFBO.cxx:
	* graf3d/gl/inc/TGLFBO.h:
	Add 'Bool_t fIsTextureBound'.
	Fix wrong logic in checking if FBOwidth/height has changed.

	* graf3d/eve/src/TEvePadFrame.cxx:
	ResetBBox and stamp it as changed in PadRangeAxisChanged().

	* graf3d/eve/src/TEvePadFrameGL.cxx:
	* graf3d/eve/inc/TEvePadFrameGL.h:
	Implement all the functions needed for rendering into FBO and for
	drawing using it as a texture.

	* tutorials/eve/testgl1.C:
	Add another view of the same histo -- drawn using FBO.

2010-07-20  Timur Pocheptsov

	* core/base/inc/TVirtualGL.h Removed TVirtualGLManip - now
	obsolete and not used anywhere at all (also removed
	TVirtualGLManager corresponding member).

	* core/base/inc/LinkDef1.h removed pragma for TVirtualGLManip

	* core/base/src/TVirtualGL.cxx removed ClassImp for TVirtualGLManip
